add forgot password, search with ajax

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -33,6 +33,12 @@
                                     class='ms-2'>Register</button>
                             </a>
                         </p>
+                        <p style="display: flex; align-items: center;">
+                            <a href='/forgot-password-page' style="margin-left: 1rem; text-decoration: none;">
+                                <button class="Btn Btn--primary login-register-btn" variant='info' size='sm'
+                                    class='ms-2' style="width: 160px !important;">Forgot password</button>
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
